:lipstick: Change Styles

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,13 @@
 .header {
+    background-color: transparent!important;
+    border: none!important;
+    box-shadow: none!important;
+    color: black;
+
     .toolbar {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        color: black;
     }
 }
