:lipstick: Update UI to home-view

--- a/src/views/home-view/homeView.scss
+++ b/src/views/home-view/homeView.scss
@@ -1,12 +1,11 @@
 .home-view__button-container {
-    padding-top: 20%;
     display: grid;
     place-items: center;
 
     .home-view__button {
         max-width: 300px;
         width: 70%;
-        margin-top: 3%;
+        margin-top: 20px;
     }
 }
 
