:lipstick: Basic design changes for calendar

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -5,4 +5,11 @@
     &_date {
         // border-radius: 5px;
     }
+
+    .MuiPickersStaticWrapper-staticWrapperRoot {
+        background-color: transparent;
+    }
+    .MuiPickersCalendarHeader-iconButton {
+        background-color: transparent;
+    }
 }
