--- a/src/views/home-view/first-page/firstPage.scss
+++ b/src/views/home-view/first-page/firstPage.scss
@@ -2,8 +2,30 @@ $image: 'https://wallpaperboat.com/wp-content/uploads/2019/12/foggy-forest-01.jp
 
 .first-page {
     width: 100%;
-    background-image: url($image);
+   // background-image: url($image);
+    background-color: #e91e63;
     background-position: center;
     background-size: cover;
     margin-top: -64px;
+
+    &__text {
+        z-index: 10;
+    }
+
+
+    &__circle {
+        position: absolute;
+        bottom: 2vh;
+        width: 60vh;
+        height: 60vh;
+       // background: linear-gradient(60deg, rgba(255,255,255,0) 0%, rgba(18,18,18,1) 90%);
+     //   border-radius: 50%;
+        z-index: 1;
+
+        svg {
+            height: 100%;
+            display: flex;
+            place-items: end;
+        }
+    }
 }
