--- a/src/components/score/score.scss
+++ b/src/components/score/score.scss
@@ -4,10 +4,17 @@
     align-items: end;
     margin-top: 40px;
 
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    padding: 30px;
+    background-color: rgba(255,255,255,0.1);
+
     &_number {
+        line-height: 1 !important;
     }
     &_text {
-        margin-bottom: 7px !important;
         margin-left: 10px !important;
     }
 }
