--- a/src/components/score/score.scss
+++ b/src/components/score/score.scss
@@ -1,20 +1,9 @@
 .pollen-score {
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    margin-top: 40px;
-
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    padding: 30px;
-    background-color: rgba(255,255,255,0.1);
-
     &_number {
         line-height: 1 !important;
     }
     &_text {
         margin-left: 10px !important;
+        line-height: 1.43 !important;
     }
 }
