--- a/src/views/home-view/homeView.scss
+++ b/src/views/home-view/homeView.scss
@@ -22,6 +22,7 @@
             position: absolute;
             right: 0;
             text-align: center;
+            z-index: 100;
         }
     }
 }
