:lipstick: Improve design

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -10,11 +10,11 @@
         }
 
         &.pollen-color-1 {
-            fill: #e91e63;
+            fill: #e9ce1e;
         }
 
         &.pollen-color-2 {
-            fill: #e91e63;
+            fill: #e97d1e;
         }
 
         &.pollen-color-3 {
