:sparkles: Enable selection of day

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -5,6 +5,10 @@
     .pollen-field {
         border-radius: 20px;
 
+        &--selected {
+            opacity: .8;
+        }
+
         &.pollen-color-empty {
             fill: #555555;
         }
