:lipstick: Add scroll down animation

--- a/src/views/home-view/homeView.scss
+++ b/src/views/home-view/homeView.scss
@@ -15,14 +15,79 @@
         }
 
         &--scroll-down {
-            bottom: 25px;
-            left: 0;
-            margin-left: auto;
-            margin-right: auto;
             position: absolute;
+            bottom: 0;
+            left: 0;
             right: 0;
-            text-align: center;
-            z-index: 100;
+            z-index: 20;
+            display: inline-block;
+            -webkit-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+            color: #fff;
+            font : normal 400 20px/1 'Josefin Sans', sans-serif;
+            letter-spacing: .1em;
+            text-decoration: none;
+            transition: opacity .3s;
+
+            #scrollDown {
+                padding-top: 80px;
+                cursor: pointer;
+            }
+            #scrollDown span {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                width: 24px;
+                height: 24px;
+                margin-left: -12px;
+                border-left: 1px solid #fff;
+                border-bottom: 1px solid #fff;
+                -webkit-transform: rotate(-45deg);
+                transform: rotate(-45deg);
+                -webkit-animation: sdb07 2s infinite;
+                animation: sdb07 2s infinite;
+                opacity: 0;
+                box-sizing: border-box;
+            }
+            #scrollDown span:nth-of-type(1) {
+                -webkit-animation-delay: 0s;
+                animation-delay: 0s;
+            }
+            #scrollDown span:nth-of-type(2) {
+                top: 16px;
+                -webkit-animation-delay: .15s;
+                animation-delay: .15s;
+            }
+            #scrollDown span:nth-of-type(3) {
+                top: 32px;
+                -webkit-animation-delay: .3s;
+                animation-delay: .3s;
+            }
+            @-webkit-keyframes sdb07 {
+                0% {
+                    opacity: 0;
+                }
+                50% {
+                    opacity: 1;
+                }
+                100% {
+                    opacity: 0;
+                }
+            }
+            @keyframes sdb07 {
+                0% {
+                    opacity: 0;
+                }
+                50% {
+                    opacity: 1;
+                }
+                100% {
+                    opacity: 0;
+                }
+            }
+        }
+        &--scroll-down:hover {
+            opacity: .5;
         }
     }
 }
