:bug: Fix footer on select

--- a/src/components/waves/footer-wave/footer.scss
+++ b/src/components/waves/footer-wave/footer.scss
@@ -1,10 +1,11 @@
 .footer {
     position: static;
     left: 0;
-    bottom: -3;
+    bottom: 0;
     width: 100%;
     z-index: -1;
     scroll-snap-align: start;
+    margin-top: auto;
 }
 
 .box {
